kubernetes/jenkins/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  labels:
    app: jenkins
spec:
  ports:
  - port: 8080
    nodePort: 8080
    name: jenkins-master
  - port: 50000
    nodePort: 50000
    name: jenkins-agent
  selector:
    app: jenkins
