kubernetes/jenkins/jenkins-ingress.yaml
apiVersion: extensions/v1beta1  
kind: Ingress  
metadata:  
  name: jenkins  
spec:  
  rules:  
  - host: qa.sh.qifun.com
    http:
      paths:
      - path: /jenkins
        backend:  
          serviceName: jenkins  
          servicePort: 8080
